--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ nltk==3.6.5
 numpy==1.21.3
 packaging==21.0
 pandas==1.3.4
-pdftotext==2.2.1
+# pdftotext==2.2.1
 Pillow==8.4.0
 plotly==5.3.1
 pyparsing==2.4.7
@@ -35,16 +35,16 @@ requests==2.26.0
 sacremoses==0.0.46
 scikit-learn==1.0
 scipy==1.7.1
-sentence-transformers==2.1.0
+# sentence-transformers==2.1.0
 sentencepiece==0.1.96
 six==1.16.0
 tenacity==8.0.1
 threadpoolctl==3.0.0
 tokenizers==0.10.3
-torch==1.10.0
-torchvision==0.11.1
+# torch==1.10.0
+# torchvision==0.11.1
 tqdm==4.62.3
-transformers==4.11.3
+# transformers==4.11.3
 typing-extensions==3.10.0.2
 urllib3==1.26.7
 visdcc==0.0.40
